[platform] de-duplicating user's VM options on import (IDEA-240526)
VM options that are exact copies of platform ones or are memory settings with lower value shall not pass into the new config directory.

GitOrigin-RevId: 9570849d054ca9699fb0d53b5e654398b1ba8bfd